force-app/main/default/objects/Community_Team__c/Community_Team__c.object-meta.xml
<CustomObject>
    <description>Team based sharing for Community with FSMs</description>
    <label>Community Team</label>
    <nameField>
        <displayFormat>CT-{0000}</displayFormat>
        <label>Community Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>