force-app/main/default/objects/Community_Team__c/fields/Community_Entity__c.field-meta.xml
<CustomField>
    <fullName>Community_Entity__c</fullName>
    <formula>TEXT(Community__r.Entity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community Entity</label>
    <type>Text</type>
</CustomField>