force-app/main/default/objects/Community_Team__c/fields/Field_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Field_User_Id__c</fullName>
    <description>Fetch the user record associated with FSM</description>
    <formula>FSM__r.RelatedRecordId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field User Id</label>
    <type>Text</type>
</CustomField>