force-app/main/default/objects/Community_Team__c/fields/FSM__c.field-meta.xml
<CustomField>
    <fullName>FSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FSM</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Community Teams</relationshipLabel>
    <relationshipName>Community_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>