force-app/main/default/objects/Community_Team__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TILE</fullName>
            </value>
            <value>
                <fullName>CABINET</fullName>
            </value>
            <value>
                <fullName>CARPET</fullName>
            </value>
            <value>
                <fullName>COUNTERTOPS</fullName>
            </value>
            <value>
                <fullName>LAMINATE</fullName>
            </value>
            <value>
                <fullName>LVP</fullName>
            </value>
            <value>
                <fullName>SPECIALTY</fullName>
            </value>
            <value>
                <fullName>VINYL</fullName>
            </value>
            <value>
                <fullName>WOOD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>