force-app/main/default/objects/Community_Team__c/fields/UniqueJobType__c.field-meta.xml
<CustomField>
    <fullName>UniqueJobType__c</fullName>
    <label>UniqueJobFSM</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>